# SimusCD8

./: CMakeLists.txt  README.md  link_video_Tcell_APC  resol.sh
run/example_spiky/: backup_000010  backup_000020  backup_000030  backup_000040  backup_000050  backup_000060  backup_000070  backup_000080  backup_000090  backup_000100  normalization.txt  param.in
run/lymphocytes/: GeneInteractionsMatrix_3decoratings_9G.txt  GeneInteractionsMatrix_9G_initial.txt  kineticsparam.txt  param_3decoratings_9G_Day1.in  param_3decoratings_9G_T.in
src/: CMakeLists.txt  main.cpp
src/plugins/: .Lymphocyte.cpp.swp  Cell_Spiky.cpp  Cell_Spiky.h  Cell_SyncClock.cpp  Cell_SyncClock.h  Lymphocyte.cpp  Lymphocyte.h
src/simuscale-core/: Alea.cpp  Alea.h  CMakeLists.txt  Cell.cpp  Cell.h  CellSize.cpp  Grid.cpp  Grid.h  InterCellSignals.cpp  InterCellSignals.h  OutputManager.cpp  OutputManager.h  Population.cpp  Population.h  Simulation.cpp  Simulation.h  WorldSize.cpp  WorldSize.h  params.h  params_3Decor_3days.h  params_8G.h  params_GS.h
src/simuscale-core/gsl/: Makefile
src/simuscale-core/movement/: Immobile.h  Motile.cpp~  MoveBehaviour.h
src/simuscale-core/params/: CellParams.h  NicheParams.h  ParamFileReader.cpp  ParamFileReader.h  PopulationParams.h  SimulationParams.cpp  SimulationParams.h
src/tests/: CMakeLists.txt  Cell_SyncClock_test.cpp  Simulation_test.cpp  test_param_loader.cpp
src/tests/integration_tests/: reprod_test.sh  simple_test.sh
src/tests/integration_tests/ODE_stem_niche/ref/: backup_000010  backup_000020  backup_000030  backup_000040  backup_000050  backup_000060  backup_000070  backup_000080  backup_000090  backup_000100  backup_000110  backup_000120  backup_000130  backup_000140  backup_000150  backup_000160  backup_000170  backup_000180  backup_000190  backup_000200  backup_000210  backup_000220  backup_000230  backup_000240  normalization.txt  param.in  signals.txt  stats.txt  trajectory.txt
src/tests/integration_tests/ODE_stem_niche_reprod/: param.in
src/tests/integration_tests/ODE_stem_niche_small/ref/: backup_000010  normalization.txt  param.in  signals.txt  stats.txt  trajectory.txt
src/view/: CMakeLists.txt  view.cpp  viewGRN.h  viewGene1.cpp  viewGene2.cpp  viewM1.cpp  viewM2.cpp
